--- a/index.html
+++ b/index.html
@@ -3,131 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>Monitor de Terramotos</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 2rem;
-      background-color: #1e1e1e;
-      color: #f0f0f0;
-    }
-
-    h1 {
-      text-align: center;
-      color: #ffffff;
-    }
-
-    #contador {
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-
-    label {
-      font-weight: 500;
-      margin-right: 0.5rem;
-    }
-
-    input[type="text"],
-    select {
-      padding: 0.5rem;
-      border: 1px solid #555;
-      border-radius: 6px;
-      background-color: #2c2c2c;
-      color: #f0f0f0;
-      margin-bottom: 1rem;
-    }
-
-    input[type="range"] {
-      vertical-align: middle;
-    }
-
-    #valorMagnitude {
-      font-weight: bold;
-      margin-left: 0.5rem;
-    }
-
-    button {
-      background-color: #3498db;
-      color: white;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #2980b9;
-    }
-
-    .terramoto {
-      border: 1px solid #444;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-left: 6px solid red;
-      background-color: #2a2a2a;
-      border-radius: 6px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    }
-
-    .forte {
-      border-left-color: #e74c3c;
-    }
-
-    .moderado {
-      border-left-color: #f39c12;
-    }
-
-    .leve {
-      border-left-color: #2ecc71;
-    }
-
-    a {
-      color: #3498db;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    hr {
-      border-color: #444;
-    }
-
-    footer {
-      margin-top: 2rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>🌍 Monitor de Terramotos </h1>
   <p id="contador">Total de terramotos: 0</p>
-  
-  <label for="filtroMagnitude">Magnitude mínima:</label>
-  <input type="range" id="filtroMagnitude" min="0" max="10" step="0.1" value="0">
-  <span id="valorMagnitude">0</span>
 
-  <br><br>
+  <form id="filtros" onsubmit="event.preventDefault(); carregarTerramotos();">
+    <label for="filtroMagnitude">Magnitude mínima:</label>
+    <input type="range" id="filtroMagnitude" min="0" max="10" step="0.1" value="0">
+    <span id="valorMagnitude">0</span>
 
-  <label for="pesquisaLocal">🔎 Procurar por local:</label>
-  <input type="text" id="pesquisaLocal" placeholder="ex: Portugal">
+    <br><br>
 
-  <br>
+    <label for="pesquisaLocal">🔎 Procurar por local:</label>
+    <input type="text" id="pesquisaLocal" placeholder="ex: Portugal">
 
-  <label for="ordenarPor">Ordenar por:</label>
-  <select id="ordenarPor">
-    <option value="data">Data (mais recente primeiro)</option>
-    <option value="magnitude">Magnitude (maior primeiro)</option>
-  </select>
+    <br><br>
+
+    <label for="ordenarPor">Ordenar por:</label>
+    <select id="ordenarPor">
+      <option value="data">Data (mais recente primeiro)</option>
+      <option value="magnitude">Magnitude (maior primeiro)</option>
+    </select>
+
+    <br><br>
+    <button type="submit">🔄 Atualizar</button>
+  </form>
 
   <hr>
-  
-  <button onclick="carregarTerramotos()">🔄 Atualizar</button>
-  <br><br>
 
   <div id="lista"></div>
 
